# dawati-help

./: autogen.sh  configure.ac
data/: Makefile.am  dawati-help.desktop.in  meego-help.desktop.in  offline.html
data/html/: index.html
data/html/css/: dawati.css  html-reset.css  layout-fixed.css  meego.css
po/: POTFILES.in  ar.po  ast.po  ca.po  ca@valencia.po  cs.po  de.po  en_GB.po  es.po  fa.po  fi.po  fr.po  gl.po  hu.po  id.po  it.po  ja.po  ko.po  nl.po  pa.po  pl.po  pt.po  pt_BR.po  ru.po  sk.po  sv.po  wa.po  zh_CN.po  zh_TW.po
src/: Makefile.am  dawati-help.c  meego-help.c
