AC_PREREQ([2.59])
AC_INIT([meego-help], [0.0.2])

AM_INIT_AUTOMAKE([AC_PACKAGE_NAME], [AC_PACKAGE_VERSION])
AC_CONFIG_MACRO_DIR([m4])
AM_CONFIG_HEADER([config.h])

m4_ifdef([AM_SILENT_RULES],[AM_SILENT_RULES([yes])])

AC_CANONICAL_HOST
AS_ALL_LINGUAS
AC_PROG_CC
AC_PROG_CC_STDC
AC_PROG_INSTALL
AC_PROG_LIBTOOL
AC_ISC_POSIX
AC_HEADER_STDC

AM_PROG_CC_C_O
AM_PATH_GLIB_2_0

PKG_CHECK_MODULES(DBUS_GLIB, dbus-glib-1)
PKG_CHECK_MODULES(GIO, gio-2.0)

IT_PROG_INTLTOOL([0.35.0])
GETTEXT_PACKAGE=meego-help
AC_SUBST(GETTEXT_PACKAGE)
AC_DEFINE_UNQUOTED([GETTEXT_PACKAGE],
                   ["$GETTEXT_PACKAGE"],
                   [Gettext domain name])
AM_GLIB_GNU_GETTEXT

AC_OUTPUT([
        Makefile
        src/Makefile
        data/Makefile
        po/Makefile.in
])


